# mx-band-bridge-sc

./: .gitignore  Cargo.toml  README.md  build-wasm.sh
interaction/: .gitignore  devnet.snippets.sh  testnet.snippets.sh
lvl1/: Cargo.toml
lvl1/output/: band-bridge-lvl1.wasm  band_bridge_lvl1.wasm
lvl1/src/: lib.rs
lvl1/wasm/: Cargo.toml
lvl1/wasm/src/: lib.rs
lvl2/: Cargo.toml
lvl2/mandos/: lvl2.scen.json
lvl2/output/: band-bridge-lvl2.wasm  band_bridge_lvl2.hex  band_bridge_lvl2.wasm
lvl2/src/: lib.rs  price_data.rs  ref_data.rs
lvl2/wasm/: Cargo.toml
lvl2/wasm/src/: lib.rs
simple-price-db/: Cargo.toml
simple-price-db/output/: simple-price-db.wasm
simple-price-db/src/: lib.rs
simple-price-db/wasm/: Cargo.toml
simple-price-db/wasm/src/: lib.rs
