[package]
name = "band-bridge-lvl1-wasm"
version = "0.2.0"
authors = ["andrei-marinica <andrei_m_marinica@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies]
band-bridge-lvl1 = { path = ".." }
elrond-wasm-output = { version="0.6.0", features=["wasm-output-mode"]}

[workspace]
